--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 <h3>投資組合最佳化 (OptEF)</h3>
                 <p>整合效率前緣 (Efficient Frontier) 理論。協助您計算在不同風險水平下的最佳資產配置權重。</p>
             </div>
-            <a href="https://hclee.shinyapps.io/OptEF/" target="_blank" class="btn">啟動最佳化引擎 &rarr;</a>
+            <a href="https://xtg4qp.csb.app/" target="_blank" class="btn">啟動最佳化引擎 &rarr;</a>
         </div>
 
     </div>
