--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
         <div class="card dca">
             <div>
-                <h3>DCA vs 單筆投入 (DCA)</h3>
+                <h3>Lump-sum vs 單筆投入 (DCA)</h3>
                 <p>比較定期定額與單筆投入的績效差異。包含視覺化歷史回測、勝率分析與 Sharpe/Sortino 指標。</p>
             </div>
             <a href="dca/index.html" class="btn">進入策略比較 &rarr;</a>
